lab1/Test/L1-A-11-36.output
Error Type B at Line 1
Error Type B at Line 3
Error Type B at Line 8
Error Type B at Line 11
Error Type B at Line 26
